--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.0",
     "karma-jasmine": "^1.0.2",
-    "react": "^15.2.0"
+    "react": "^15.2.0"//看不看得见？貌似并没有啥问题，其实还是有问题。
   }
 }
