--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsmajiang",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "ma jiang js version",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.10.4",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.0",
     "karma-jasmine": "^1.0.2",
-    "react": "^15.2.0"//看不看得见？貌似并没有啥问题，其实还是有问题。
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.9.0"
   }
 }
