--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-route": "^1.0.3",
+    "react-router": "^2.5.2",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
