three players can start game,all have 13 zhang pai

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "ma jiang js version",
   "main": "index.js",
   "scripts": {
+    "w":"webpack --watch",
+    "start": "node app.js",
     "test": "node_modules/.bin/karma start karma.conf.js"
   },
   "author": "",
