--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "jsmajiang",
-  "version": "1.1.0",
-  "description": "ma jiang js version",
+  "version": "0.0.225",
+  "description": "node js majiang practice",
   "main": "index.js",
   "scripts": {
     "w": "webpack --watch",
-    "start": "node app.js",
+    "start": "babel-node app.js",
     "test": "node_modules/.bin/karma start karma.conf.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
+    "express": "^4.16.2",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-route": "^1.0.3",
     "react-router": "^2.5.2",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.7.4"
   },
   "devDependencies": {
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -33,7 +33,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-requirejs": "^1.1.0",
     "requirejs": "^2.3.2",
-    "webpack": "^1.13.1",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
