--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "w": "webpack --watch",
-    "start": "babel-node app.js",
+    "b": "webpack",
+    "start": "babel-node server/app.js",
     "test": "node_modules/.bin/karma start karma.conf.js"
   },
   "author": "",
