--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^4.18.2",
     "express": "^4.16.2",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
@@ -20,7 +21,7 @@
     "socket.io": "^1.7.4"
   },
   "devDependencies": {
-    "babel-cli":"latest",
+    "babel-cli": "latest",
     "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.4.1",
