--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-cli": "latest",
     "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -35,7 +35,8 @@
     "karma-jasmine": "^1.1.1",
     "karma-requirejs": "^1.1.0",
     "requirejs": "^2.3.2",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   }
 }
