--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.3.2",
     "eslint": "^4.18.2",
     "express": "^4.16.2",
     "react": "^15.2.0",
