--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
+            
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceFolder}\\index.js"
+            "program": "${workspaceFolder}/server/app.js"
         }
     ]
 }
