--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "w": "webpack --watch",
     "b": "webpack",
     "start": "babel-node server/app.js",
-    "test": "node_modules/.bin/karma start karma.conf.js"
+    "test": "node_modules/.bin/karma start karma.conf.js",
+    "j": "jasmine spec/majiangTest.js",
+    "a": "ava"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +24,7 @@
     "socket.io": "^1.7.4"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
     "babel-cli": "latest",
     "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
@@ -29,7 +32,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "jasmine": "^3.1.0",
     "jasmine-core": "^2.4.1",
+    "jest": "^22.4.2",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "latest",
@@ -39,5 +44,20 @@
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
+  },
+  "ava": {
+    "files": [
+      "spec/ava_majiangTest.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "babel": {
+      "presets": [
+        "es2015",
+        "stage-1",
+        "react"
+      ]
+    }
   }
 }
