--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "w": "webpack --watch",
     "b": "webpack",
     "start": "babel-node server/app.js",
-    "test": "node_modules/.bin/karma start karma.conf.js",
+    "test": "karma start karma.conf.js",
     "j": "jasmine spec/majiangTest.js",
     "a": "ava"
   },
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.26.0",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.4.1",
     "jest": "^22.4.2",
@@ -51,13 +52,6 @@
     ],
     "require": [
       "babel-register"
-    ],
-    "babel": {
-      "presets": [
-        "es2015",
-        "stage-1",
-        "react"
-      ]
-    }
+    ]
   }
 }
