--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react-dom": "^15.2.0",
     "react-route": "^1.0.3",
     "react-router": "^2.5.2",
-    "socket.io": "^1.7.4"
+    "socket.io": "^1.7.4",
+    "ws": "^5.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/ws": "^4.0.2",
     "ava": "^0.25.0",
     "babel-cli": "latest",
     "babel-core": "^6.26.0",
@@ -42,6 +45,7 @@
     "karma-jasmine": "^1.1.1",
     "karma-requirejs": "^1.1.0",
     "requirejs": "^2.3.2",
+    "typescript": "^2.8.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
