--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "w": "webpack --watch",
     "b": "webpack",
     "start": "babel-node server/app.js",
+    "dev": "node server_build/app.js",
     "test": "karma start karma.conf.js",
     "j": "jasmine spec/majiangTest.js",
     "a": "ava"
@@ -14,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.11.1",
+    "@types/ws": "^4.0.2",
+    "@types/lodash": "^4.14.108",
     "chalk": "^2.3.2",
     "eslint": "^4.18.2",
     "express": "^4.16.2",
@@ -24,8 +28,6 @@
     "ws": "^5.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.11.1",
-    "@types/ws": "^4.0.2",
     "ava": "^0.25.0",
     "babel-cli": "latest",
     "babel-core": "^6.26.0",
