test player hupai_data

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "ava": {
     "files": [
-      "spec/ava_majiangTest.js"
+      "spec/ava_playerTest.js"
     ],
     "require": [
       "babel-register"
