can show god player grou_shou_pai when game start

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "typeRoots": [
             "node_modules/@types"
         ],
-        "watch": true,
+        // "watch": true,
         "lib": [
             "dom","es2017"
         ]
