test KawuXing ok

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,11 @@
       "problemMatcher": [
         "$tsc"
       ]
+    },
+    {
+      "label": "kawu",
+      "type":"shell",
+      "command":""
     }
   ]
 }
