--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-  "presets": ["react", "es2015", "stage-1"]
+  "presets": ["react", "es2015", "stage-1"],
+  "plugins": ["transform-es2015-modules-umd"],
+  "auxiliaryCommentBefore": "istanbul ignore next"
 }
