--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "w": "webpack --watch",
     "b": "webpack",
-    "start": "babel-node server/app.js",
+    "start": "node server_build/server/app.js",
     "dev": "node server_build/app.js",
     "test": "karma start karma.conf.js",
     "j": "jasmine spec/majiangTest.js",
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.11.1",
-    "@types/ws": "^4.0.2",
     "@types/lodash": "^4.14.108",
+    "@types/ws": "^4.0.2",
     "chalk": "^2.3.2",
     "eslint": "^4.18.2",
     "express": "^4.16.2",
@@ -37,10 +37,12 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.4.1",
     "jest": "^22.4.2",
     "karma": "^1.7.1",
+    "karma-babel-preprocessor": "^7.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "latest",
     "karma-jasmine": "^1.1.1",
@@ -53,7 +55,7 @@
   },
   "ava": {
     "files": [
-      "spec/ava_playerTest.js"
+      "server_build/spec/hu_test/*.js"
     ],
     "require": [
       "babel-register"
