--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.108",
+    "@types/node": "^11.11.3",
     "@types/ws": "^4.0.2",
     "chalk": "^2.3.2",
     "eslint": "^4.18.2",
