开始数字麻将算法

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "ava": {
     "files": [
-      "server_build/spec/hu_test/*.js"
+      "spec/newhu_test/*.js"
     ],
     "require": [
       "babel-register"
