--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "node server_build/app.js",
     "test": "karma start karma.conf.js",
     "j": "jasmine spec/majiangTest.js",
-    "a": "ava"
+    "a": "ava --watch"
   },
   "author": "",
   "license": "ISC",
@@ -22,22 +22,17 @@
     "chalk": "^2.3.2",
     "eslint": "^4.18.2",
     "express": "^4.16.2",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "react-router": "^2.5.2",
     "socket.io": "^1.7.4",
     "ws": "^5.1.1"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
+    "ava": "latest",
     "babel-cli": "latest",
     "babel-core": "^6.26.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.4.1",
