--- a/package.json
+++ b/package.json
@@ -44,17 +44,22 @@
     "karma-jasmine": "^1.1.1",
     "karma-requirejs": "^1.1.0",
     "requirejs": "^2.3.2",
+    "ts-node": "^8.0.3",
     "typescript": "^2.9.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   },
   "ava": {
+    "compileEnhancements": false,
+		"extensions": [
+			"ts"
+		],
     "files": [
-      "spec/score/*.js"
+      "spec/simulate/*.ts"
     ],
     "require": [
-      "babel-register"
-    ]
+			"ts-node/register"
+		]
   }
 }
